apps/linkding/envs/development/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkding
  annotations:
    metallb.io/loadBalancerIPs: 10.0.10.201
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 9090
      protocol: TCP
  selector:
    app: linkding
