apps/linkding/envs/development/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: linkding-dev.cluster.simonjung.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  number: 3000
  tls:
    - hosts:
        - linkding-dev.cluster.simonjung.io
      secretName: linkding-ingress-secret
